--- a/app/src/main/res/layout/datos_perfil_trabajador.xml
+++ b/app/src/main/res/layout/datos_perfil_trabajador.xml
@@ -18,10 +18,10 @@
             android:layout_marginStart="24dp"
             android:text="Nombres:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+            app:layout_constraintTop_toBottomOf="@+id/imgFoto" />
 
         <EditText
-            android:id="@+id/editTextText9"
+            android:id="@+id/txtNombres"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:ems="10"
@@ -36,13 +36,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Apellidos:"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText9"
+            app:layout_constraintTop_toBottomOf="@+id/txtNombres"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp" />
 
         <EditText
-            android:id="@+id/editTextText11"
+            android:id="@+id/txtApellidos"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:ems="10"
@@ -57,13 +57,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Telefono:"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText11"
+            app:layout_constraintTop_toBottomOf="@+id/txtApellidos"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp" />
 
         <EditText
-            android:id="@+id/editTextText10"
+            android:id="@+id/txtTelefono"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:ems="10"
@@ -78,53 +78,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Correo:"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText10"
+            app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp" />
 
         <EditText
-            android:id="@+id/editTextText12"
+            android:id="@+id/txtCorreo"
             android:layout_width="250dp"
             android:layout_height="50dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="text"
-            app:layout_constraintTop_toBottomOf="@+id/textView30"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp" />
-
-        <TextView
-            android:id="@+id/textView26"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Provincia"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText12"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp" />
-
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView26"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
         <TextView
             android:id="@+id/textView27"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Distrito"
-            app:layout_constraintTop_toBottomOf="@+id/spinner2"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            android:text="Distrito"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
 
         <Spinner
-            android:id="@+id/spinner3"
+            android:id="@+id/spnDistrito"
             android:layout_width="250dp"
             android:layout_height="50dp"
             app:layout_constraintTop_toBottomOf="@+id/textView27"
@@ -136,23 +117,46 @@
             android:id="@+id/textView29"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Área:"
-            app:layout_constraintTop_toBottomOf="@+id/spinner3"
+            android:text="Especialidad:"
+            app:layout_constraintTop_toBottomOf="@+id/spnDistrito"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp" />
 
-        <Spinner
-            android:id="@+id/spinner4"
+        <EditText
+            android:id="@+id/txtEspecialidad"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView29"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView29" />
+
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="URL imagen:"
+            app:layout_constraintTop_toBottomOf="@+id/txtEspecialidad"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="16dp" />
+
+        <EditText
+            android:id="@+id/txtImagen"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
         <Button
-            android:id="@+id/buttonSubmit"
+            android:id="@+id/btnGuardar"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_marginTop="44dp"
@@ -160,15 +164,26 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner4" />
+            app:layout_constraintTop_toBottomOf="@+id/txtImagen" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/imgFoto"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            app:srcCompat="@drawable/usuario"
-            tools:layout_editor_absoluteX="121dp"
-            tools:layout_editor_absoluteY="2dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/usuario" />
 
+        <TextView
+            android:id="@+id/lblMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Volver al menú"
+            android:textColor="#2818FF"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="@+id/btnGuardar"
+            app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
