--- a/app/src/main/res/layout/registro_exitoso_trabajador.xml
+++ b/app/src/main/res/layout/registro_exitoso_trabajador.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btnPerfil"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:text="Continuar editando perfil"
