--- a/app/src/main/res/layout/listado_propuestas.xml
+++ b/app/src/main/res/layout/listado_propuestas.xml
@@ -74,4 +74,14 @@
         android:padding="8dp"
         tools:listitem="@layout/plantilla_listado_propuestas"/>
 
+    <ImageButton
+        android:id="@+id/btnPropuestasAceptadas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/sym_action_email" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
